nodeapp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodeapp
  labels:
    name: nodeapp
